--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
-version = '1.0'
-group = 'com.yourname.modid'
-archivesBaseName = 'modid'
+version = '3.1'
+group = 'net.mcreator.kailandextras'
+archivesBaseName = 'KailandExtras'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
